--- a/index-tech.html
+++ b/index-tech.html
@@ -71,16 +71,23 @@
 							</div>
 						</div>
 						<div class="col-4">
-							<div class="category for_building">
+							<div class="category for-building">
 								<h3>Техника</h3>
 								<a class="" href="#">Для стройки</a>
 							</div>
 						</div>
 						<div class="col-8">							
 							<div class="main-slider">
-							  <div class="slide-item">1</div>
-							  <div class="slide-item">2</div>
-							  <div class="slide-item">3</div>
+							  <div class="slide-item first">
+							  	<h3>Дрели</h3>
+							  	<p>Cоседям на радость!</p>
+							  	<a class="slide-link" href="#">Открыть каталог</a>
+							  </div>
+							  <div class="slide-item second">
+							  	<h3>Перфораторы</h3>
+							  	<p>Настоящие мужские игрушки</p>
+							  	<a class="slide-link" href="#">Открыть каталог</a>
+							  </div>
 							</div>
 						</div>
 						<div class="col-4">
