--- a/index-tech.html
+++ b/index-tech.html
@@ -103,60 +103,59 @@
 					</div>
 				</div>
 			</section>
-			<section class="popular-goods">
-				<div class="popular-goods-container">
-					<h2>Популярные товары:</h2>
-					<button class="button">Все популярные товары</button>
+			<section class="goods">
+				<div class="container">
+					<div class="popular">
+						<h2>Популярные товары:</h2>
+						<a>Все популярные товары</a>
+					</div>
+					<ul class="goods-list">
+						<div class="col-3">
+							<li class="popular-goods-list-item">
+								<img src="img/" width="" height="" alt="Изображение перфоратора">
+								<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
+								<p class="first-price">32500р.</p>
+								<p>25500р.</p>
+							</li>
+						</div>
+						<div class="col-3">
+							<li class="popular-goods-list-item">
+								<img src="img/" width="" height="" alt="Изображение перфоратора">
+								<h3>Перфоратор&#160;BOSCH BFG&#160;3000</h3>
+								<p class="first-price">22500р.</p>
+								<p>15500р.</p>
+							</li>
+						</div>
+						<div class="col-3">
+							<li class="popular-goods-list-item">
+								<img src="img/" width="" height="" alt="Изображение перфоратора">
+								<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
+								<p class="first-price">30500р.</p>
+								<p>25500р.</p>
+							</li>
+						</div>
+						<div class="col-3">
+							<li class="popular-goods-list-item">
+								<img src="img/" width="" height="" alt="Изображение перфоратора">
+								<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
+								<p>12500р.</p>
+							</li>
+						</div>
+					</ul>
 				</div>
-				<ul class="popular-goods-list">
-					<li class="popular-goods-list-item">
-						<img src="img/" width="" height="" alt="Изображение перфоратора">
-						<h3>Перфоратор BOSCH BFG 9000</h3>
-						<p>32500р.</p>
-						<p>25500р.</p>
-						<div class="goods-container">
-							<button class="button">Купить</button>
-							<button class="button">В закладки</button>
-						</div>
-					</li>
-					<li class="popular-goods-list-item">
-						<img src="img/" width="" height="" alt="Изображение перфоратора">
-						<h3>Перфоратор BOSCH BFG 3000</h3>
-						<p>22500р.</p>
-						<p>15500р.</p>
-						<div class="goods-container">
-							<button class="button">Купить</button>
-							<button class="button">В закладки</button>
-						</div>
-					</li>
-					<li class="popular-goods-list-item">
-						<img src="img/" width="" height="" alt="Изображение перфоратора">
-						<h3>Перфоратор BOSCH BFG 6000</h3>
-						<p>30500р.</p>
-						<p>25500р.</p>
-						<div class="goods-container">
-							<button class="button">Купить</button>
-							<button class="button">В закладки</button>
-						</div>
-					</li>
-					<li class="popular-goods-list-item">
-						<img src="img/" width="" height="" alt="Изображение перфоратора">
-						<h3>Перфоратор BOSCH BFG 2000</h3>
-						<p>12500р.</p>
-						<div class="goods-container">
-							<button class="button">Купить</button>
-							<button class="button">В закладки</button>
-						</div>
-					</li>
-				</ul>
 			</section>
-			<section class="popular-producers">
-				<div class="popular-producers-container">
-					<h2>Популярные производители:</h2>
-					<button class="button">Все производители</button>
+			<section class="producers">
+				<div class="container">
+					<div class="popular">
+						<h2>Популярные производители:</h2>
+						<a>Все производители</a>
+					</div>
+					<ul class="popular-producers-list">
+						<li><img>
+					</li>
+					</ul>
 				</div>
-				<ul class="popular-producers-list">
-					<li><img>
+			</section>
 		</main>
 		<footer>
 		</footer>
