--- a/index-tech.html
+++ b/index-tech.html
@@ -109,39 +109,47 @@
 						<h2>Популярные товары:</h2>
 						<a>Все популярные товары</a>
 					</div>
-					<ul class="goods-list">
-						<div class="col-3">
-							<li class="popular-goods-list-item">
-								<img src="img/" width="" height="" alt="Изображение перфоратора">
-								<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
-								<p class="first-price">32500р.</p>
-								<p>25500р.</p>
-							</li>
-						</div>
-						<div class="col-3">
-							<li class="popular-goods-list-item">
-								<img src="img/" width="" height="" alt="Изображение перфоратора">
-								<h3>Перфоратор&#160;BOSCH BFG&#160;3000</h3>
-								<p class="first-price">22500р.</p>
-								<p>15500р.</p>
-							</li>
-						</div>
-						<div class="col-3">
-							<li class="popular-goods-list-item">
-								<img src="img/" width="" height="" alt="Изображение перфоратора">
-								<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
-								<p class="first-price">30500р.</p>
-								<p>25500р.</p>
-							</li>
-						</div>
-						<div class="col-3">
-							<li class="popular-goods-list-item">
-								<img src="img/" width="" height="" alt="Изображение перфоратора">
-								<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
-								<p>12500р.</p>
-							</li>
-						</div>
-					</ul>
+					<div class="row">
+						<ul class="goods-list">
+							<div class="col-3">
+								<li class="goods-list-item action">
+									<button class="button">Купить</button>
+									<button class="button">В закладки</button>
+									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
+									<p class="first-price">32500р.</p>
+									<p class="last-price">25500р.</p>
+								<li class="goods-list-item">
+									<img src="img/bfg_9000.png" width="184" height="164" alt="Изображение перфоратора">
+									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
+									<p class="first-price">32500р.</p>
+									<p class="last-price">25500р.</p>
+								</li>
+							</div>
+							<div class="col-3">
+								<li class="goods-list-item">
+									<img src="img/bfg_3000.png" width="184" height="164" alt="Изображение перфоратора">
+									<h3>Перфоратор&#160;BOSCH BFG&#160;3000</h3>
+									<p class="first-price">22500р.</p>
+									<p class="last-price">15500р.</p>
+								</li>
+							</div>
+							<div class="col-3">
+								<li class="goods-list-item">
+									<img src="img/bfg_6000.png" width="184" height="164" alt="Изображение перфоратора">
+									<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
+									<p class="first-price">30500р.</p>
+									<p class="last-price">25500р.</p>
+								</li>
+							</div>
+							<div class="col-3">
+								<li class="goods-list-item new">
+									<img src="img/bfg_2000.png" width="184" height="164" alt="Изображение перфоратора">
+									<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
+									<p class="last-price">12500р.</p>
+								</li>
+							</div>
+						</ul>
+					</div>
 				</div>
 			</section>
 			<section class="producers">
