Верстка активных блоков

--- a/index-tech.html
+++ b/index-tech.html
@@ -113,8 +113,10 @@
 						<ul class="goods-list">
 							<div class="col-3">
 								<li class="goods-list-item action">
-									<button class="button">Купить</button>
-									<button class="button">В закладки</button>
+									<div class="buttons">
+										<button class="button to-buy">Купить</button>
+										<button class="button to-bookmarks">В закладки</button>
+									</div>
 									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
 									<p class="first-price">32500р.</p>
 									<p class="last-price">25500р.</p>
