Трети блок готов

--- a/index-tech.html
+++ b/index-tech.html
@@ -105,9 +105,10 @@
 			</section>
 			<section class="goods">
 				<div class="container">
+					<h2 class="visually-hidden">Товары</h2>
 					<div class="popular">
-						<h2>Популярные товары:</h2>
-						<a>Все популярные товары</a>
+						<h3>Популярные товары:</h2>
+						<a href="#">Все популярные товары</a>
 					</div>
 					<div class="row">
 						<ul class="goods-list">
@@ -120,6 +121,7 @@
 									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
 									<p class="first-price">32500р.</p>
 									<p class="last-price">25500р.</p>
+								</li>
 								<li class="goods-list-item">
 									<img src="img/bfg_9000.png" width="184" height="164" alt="Изображение перфоратора">
 									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
@@ -156,14 +158,39 @@
 			</section>
 			<section class="producers">
 				<div class="container">
+					<h2 class="visually-hidden">Производители</h2>
 					<div class="popular">
-						<h2>Популярные производители:</h2>
-						<a>Все производители</a>
+					<h3>Популярные производители:</h2>
+					<a href="#">Все производители</a>
+				</div>
+					<div class="row">
+						<ul class="producers-list">
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_1.png" width="220" height="145" alt="логотип Bosch"><span class="visually-hidden">Bosch</span></a></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_2.png" width="220" height="145" alt="логотип Makita"></a><span class="visually-hidden">Makita</span></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_3.png" width="220" height="145" alt="логотип DeWALT"></a><span class="visually-hidden">DeWALT</span></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_4.png" width="220" height="145" alt="логотип Интерскол"></a><span class="visually-hidden">Интерскол</span></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_5.png" width="220" height="145" alt="логотип Hitachi"><span class="visually-hidden">Hitachi</span></a></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_6.png" width="220" height="145" alt="логотип LG"></a><span class="visually-hidden">LG</span></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_7.png" width="220" height="145" alt="логотип AEG"></a><span class="visually-hidden">AEG</span></li>
+							</div>
+							<div class="col-3">
+								<li><a class="producers-item" href="#"><img src="img/logo_8.png" width="220" height="145" alt="логотип Metabo"></a><span class="visually-hidden">Metabo</span></li>
+							</div>
+						</ul>
 					</div>
-					<ul class="popular-producers-list">
-						<li><img>
-					</li>
-					</ul>
 				</div>
 			</section>
 		</main>
