Начало верстки футера

--- a/index-tech.html
+++ b/index-tech.html
@@ -195,6 +195,34 @@
 			</section>
 		</main>
 		<footer>
+			<div class="footer-top">
+				<div class="container">
+					<div class="footer-adress">
+						<img src="img/logo_footer.png" width="220" height="68" alt="Логотип Техномарт">
+						<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+						+7 (812) 555-05-55</p>
+					</div>
+					<div class="footer-navigation">
+						<ul class="first-navigation-list">
+							<li><a href="#">Компания</a></li>
+							<li><a href="#">Новости</a></li>
+							<li><a href="tech-catalog.html">Каталог</a></li>
+							<li><a href="#">Доставка</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+						<ul class="second-navigation-list">
+							<li><a href="#">Материалы</a></li>
+							<li><a href="#">Техника</a></li>
+							<li><a href="#">Инструмент</a></li>
+							<li><a href="#">Спецпредложения</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="footer-bottom">
+				<div class="container">
+				</div>
+			</div>
 		</footer>
 		<script src="js/jquery-3.3.1.min.js">
 		</script>
