Сделан блок "О компании"

--- a/index-tech.html
+++ b/index-tech.html
@@ -193,6 +193,34 @@
 					</div>
 				</div>
 			</section>
+			<section class="about-company">
+				<div class="container">
+					<h2 class="visually-hidden">О компании Техномарт</h2>
+					<div class="row">
+						<div class="col-8">
+							<h3>Компания &#171;Техномарт&#187;</h3>
+							<p class="shopping">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+							</p>
+							<p class="cooperation">Мы можем доставить ваш товар в самые отдаленные точки России!
+							Техномарт работает со многими транспортными компаниями:</p>
+							<ul class="companies-list">
+								<li>Деловые линии</li>
+								<li>Автотрейдинг</li>
+								<li>ЖелДорЭкспедиция</li>
+							</ul>
+							<a href="#">Подробнее о компании</a>
+						</div>
+						<div class="col-4">
+							<h3>Контакты</h3>
+							<p class="self-service">Вы&#160;можете&#160;забрать&#160;товар&#160;сами, 
+							заехав&#160;в&#160;наш&#160;офис:
+							</p>
+							<img class="map" src="img/map.png" width="300" height="158" alt="Расположение офиса на карте">
+							<button>Заблудились? Напишите нам!</button>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="main-footer">
 			<div class="footer-top">
