Верстка последнего блока первой страницы

--- a/index-tech.html
+++ b/index-tech.html
@@ -110,49 +110,57 @@
 						<h3>Популярные товары:</h2>
 						<a href="#">Все популярные товары</a>
 					</div>
-					<div class="row">
-						<ul class="goods-list">
+					<div class="goods-list">
+						<div class="row">
 							<div class="col-3">
-								<li class="goods-list-item action">
-									<div class="buttons">
-										<button class="button to-buy">Купить</button>
-										<button class="button to-bookmarks">В закладки</button>
-									</div>
-									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
-									<p class="first-price">32500р.</p>
-									<p class="last-price">25500р.</p>
-								</li>
-								<li class="goods-list-item">
+								<div class="goods-list-item">
 									<img src="img/bfg_9000.png" width="184" height="164" alt="Изображение перфоратора">
 									<h3>Перфоратор&#160;BOSCH BFG&#160;9000</h3>
 									<p class="first-price">32500р.</p>
 									<p class="last-price">25500р.</p>
-								</li>
+									<div class="buttons">
+										<button class="button to-buy">Купить</button>
+										<button class="button to-bookmarks">В закладки</button>
+									</div>
+								</div>
 							</div>
 							<div class="col-3">
-								<li class="goods-list-item">
+								<div class="goods-list-item">
 									<img src="img/bfg_3000.png" width="184" height="164" alt="Изображение перфоратора">
 									<h3>Перфоратор&#160;BOSCH BFG&#160;3000</h3>
 									<p class="first-price">22500р.</p>
 									<p class="last-price">15500р.</p>
-								</li>
+									<div class="buttons">
+										<button class="button to-buy">Купить</button>
+										<button class="button to-bookmarks">В закладки</button>
+									</div>
+								</div>
 							</div>
 							<div class="col-3">
-								<li class="goods-list-item">
+								<div class="goods-list-item">
 									<img src="img/bfg_6000.png" width="184" height="164" alt="Изображение перфоратора">
 									<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
 									<p class="first-price">30500р.</p>
 									<p class="last-price">25500р.</p>
-								</li>
-							</div>
+									<div class="buttons">
+										<button class="button to-buy">Купить</button>
+										<button class="button to-bookmarks">В закладки</button>
+										</div>
+									</div>
+								</div>
 							<div class="col-3">
-								<li class="goods-list-item new">
+								<div class="goods-list-item new">
 									<img src="img/bfg_2000.png" width="184" height="164" alt="Изображение перфоратора">
 									<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
 									<p class="last-price">12500р.</p>
-								</li>
+									<div class="buttons">
+										<button class="button to-buy">Купить</button>
+										<button class="button to-bookmarks">В закладки</button>
+										</div>
+									</div>
+								</div>
 							</div>
-						</ul>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -190,6 +198,87 @@
 								<li><a class="producers-item" href="#"><img src="img/logo_8.png" width="220" height="145" alt="логотип Metabo"></a><span class="visually-hidden">Metabo</span></li>
 							</div>
 						</ul>
+					</div>
+				</div>
+			</section>
+			<section class="services">
+				<div class="container">
+					<h2 class="visually-hidden">Сервисы</h2>
+					<div class="promo">
+						<h3>Сервисы</h3>
+						<p>Хороший интернет-магазин отличается от плохого не только ценами!
+						Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+						</p>
+					</div>
+					<div class="row">
+						<div class="col-3">
+							<ul class="tab-list">
+								<li><a class="tab-link current" href="#tab-1">Доставка</a></li>
+								<li><a class="tab-link" href="#tab-2">Гарантия</a></li>
+								<li><a class="tab-link" href="#tab-3">Кредит</a></li>
+							</ul>
+						</div>
+						<div class="col-8">
+							<div class="services-slider">
+						<div class="main-tab">
+							<div class="slides-item current" id="tab-1">
+							  	<h3>Доставка</h3>
+							  	<p>Мы с удовольствием доставим ваш товар прямо 
+								к вашему подъезду совершенно бесплатно!
+								Ведь мы&#160;неплохо&#160;заработаем, 
+								поднимая&#160;его&#160;на&#160;ваш&#160;этаж!
+								</p>
+							</div>
+							<div class="slides-item" id="tab-2">
+							  	<h3>Гарантия</h3>
+							  	<p>
+								Если купленный у нас товар поломается или заискрит, 
+								а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
+								Дом уж восстановите как-нибудь сами.
+								</p>
+							</div>
+							<div class="slides-item" id="tab-3">
+							  	<h3>Кредит</h3>
+							  	<p>
+								Залезть в долговую яму стало проще! 
+								Кредитные консультанты придут вам на помощь.
+								</p>
+							  	<a class="slide-link" href="#">Отправить заявку</a>
+							</div>
+						</div>
+						</div>
+					</div>
+
+
+
+
+					<div class="services-slider">
+						<div class="main-slider">
+							<div class="slide-item first">
+							  	<h3>Доставка</h3>
+							  	<p>Мы с удовольствием доставим ваш товар прямо 
+								к вашему подъезду совершенно бесплатно!
+								Ведь мы неплохо заработаем, 
+								поднимая его на ваш этаж!
+								</p>
+							</div>
+							<div class="slide-item second">
+							  	<h3>Гарантия</h3>
+							  	<p>
+								Если купленный у нас товар поломается или заискрит, 
+								а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
+								Дом уж восстановите как-нибудь сами.
+								</p>
+							</div>
+							<div class="slide-item second">
+							  	<h3>Кредит</h3>
+							  	<p>
+								Залезть в долговую яму стало проще! 
+								Кредитные консультанты придут вам на помощь.
+								</p>
+							  	<a class="slide-link" href="#">Отправить заявку</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
