--- a/index-tech.html
+++ b/index-tech.html
@@ -218,30 +218,30 @@
 								<li><a class="tab-link" href="#tab-3">Кредит</a></li>
 							</ul>
 						</div>
-						<div class="col-8">
+						<div class="col-9">
 							<div class="services-slider">
 						<div class="main-tab">
 							<div class="slides-item current" id="tab-1">
 							  	<h3>Доставка</h3>
-							  	<p>Мы с удовольствием доставим ваш товар прямо 
-								к вашему подъезду совершенно бесплатно!
-								Ведь мы&#160;неплохо&#160;заработаем, 
+							  	<p class="short">Мы с удовольствием доставим ваш&#160;товар&#160;прямо 
+								к&#160;вашему&#160;подъезду&#160;совершенно бесплатно!
+								Ведь&#160;мы&#160;неплохо&#160;заработаем, 
 								поднимая&#160;его&#160;на&#160;ваш&#160;этаж!
 								</p>
 							</div>
 							<div class="slides-item" id="tab-2">
 							  	<h3>Гарантия</h3>
 							  	<p>
-								Если купленный у нас товар поломается или заискрит, 
-								а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
-								Дом уж восстановите как-нибудь сами.
+								Если купленный у нас товар&#160;поломается&#160;или&#160;заискрит, 
+								а&#160;также&#160;в&#160;случае&#160;пожара,&#160;спровоцированного&#160;его&#160;возгоранием,  вы&#160;всегда&#160;можете&#160;быть&#160;уверены&#160;в&#160;нашей&#160;гарантии.&#160;Мы&#160;обменяем сгоревший&#160;товар&#160;на&#160;новый. 
+								Дом&#160;уж&#160;восстановите&#160;как&#160;-&#160;нибудь&#160;сами.
 								</p>
 							</div>
 							<div class="slides-item" id="tab-3">
 							  	<h3>Кредит</h3>
 							  	<p>
-								Залезть в долговую яму стало проще! 
-								Кредитные консультанты придут вам на помощь.
+								Залезть в долговую яму стало&#160;проще! 
+								Кредитные&#160;консультанты&#160;придут&#160;вам&#160;на&#160;помощь.
 								</p>
 							  	<a class="slide-link" href="#">Отправить заявку</a>
 							</div>
