--- a/cataog-tech.html
+++ b/cataog-tech.html
@@ -30,16 +30,25 @@
 					</div>
 				</div>
 				<div class="container">
-					<div class="adress-and-registration">
+					<div class="adress-and-registration catalog-navigation">
 						<p class="i-shop">Интернет-магазин строительных&#160;материалов и&#160;инструментов&#160;для&#160;ремонта</p>
 						<div class="adress">
 							<p class="telephone">+7 (812) 555-05-55</p>
 							<p class="company-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 						</div>
-						<ul class="user-navigation-list">
-							<li><a class="login-link" href="#">Войти</a></li>
-							<li><a class="registration-link" href="#">Регистрация</a></li>
-						</ul>
+						<div class="user-navigation-container">
+							<ul class="user-navigation-list user-authorization ">
+								<li><a class="log-in-link" href="#"><svg class="authorization" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18"><path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/></svg>
+								Равшан Джамшутович</a></li>
+								<li><a class="log-out-link" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17"><g fill="#c5c5c5"><path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/><path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/></g></svg>
+								</a></li>
+							</ul>
+							<div class="my-information">
+								<a href="#">Мои заказы</a>
+								<div class="dot"></div>
+								<a href="#">Личный кабинет</a>
+							</div>
+						</div>
 					</div>
 					<ul class="site-navigation-list">
 						<li><a href="index-tech.html">Главная</a></li>
@@ -272,8 +281,8 @@
 		<section class="modal modal-login-cart">
 			<p>Товар добавлен в корзину!</p>
 			<div class="modal-buttons-container">
-				<button class="button">Оформить заказ</button>
-				<button class="button">Продолжить покупки</button>
+				<button class="to-order">Оформить заказ</button>
+				<button class="to-continue">Продолжить покупки</button>
 			</div>
 			<button class="modal-close" type="button">Закрыть</button>
 		</section>
