стрелки навигации на слайдере готовы

--- a/index-tech.html
+++ b/index-tech.html
@@ -18,7 +18,7 @@
 						<ul class="order-navigation-list">
 							<li>
 								<form class="search-form">
-									<input type="search" placeholder="Поиск">
+									<input type="search" placeholder="Поиск:">
 									<button class="visually-hidden" type="submit">
 								</form>
 							</li>
@@ -35,7 +35,7 @@
 							<p class="telephone">+7 (812) 555-05-55</p>
 							<p class="company-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 						</div>
-						<ul class="user-navigation-list-index">
+						<ul class="user-navigation-list">
 							<li><a class="login-link" href="#">Войти</a></li>
 							<li><a class="registration-link" href="#">Регистрация</a></li>
 						</ul>
