--- a/cataog-tech.html
+++ b/cataog-tech.html
@@ -89,23 +89,23 @@
 									    <legend class="legend">Производители:</legend>
 										<ul class="filter-group">
 									        <li class="filter-producers">
-									            <input class="visually-hidden" type="radio" name="radio" id="filter-bosch" checked>
+									            <input class="visually-hidden" type="checkbox" name="bosch" id="filter-bosch" checked>
 									            <label for="filter-bosch">Bosch</label>
 									        </li>
-									        <li>
-									            <input class="visually-hidden" type="radio" name="radio" id="filter-interscol">
+									        <li class="filter-producers>
+									            <input class="visually-hidden" type="checkbox" name="interscol" id="filter-interscol">
 									            <label for="filter-interscol">Интерскол</label>
 									        </li>
-									        <li>
-									            <input class="visually-hidden" type="radio" name="radio" id="filter-makita" checked>
+									        <li class="filter-producers>
+									            <input class="visually-hidden" type="checkbox" name="Makita" id="filter-makita" checked>
 									            <label for="filter-makita">Makita</label>
 									        </li>
-									        <li>
-									            <input class="visually-hidden" type="radio" name="radio" id="filter-dewalt">
+									        <li class="filter-producers>
+									            <input class="visually-hidden" type="checkbox" name="Dewalt" id="filter-dewalt">
 									            <label for="filter-dewalt">Dewalt</label>
 									        </li>
-									        <li>
-									            <input class="visually-hidden" type="radio" name="radio" id="filter-hitachi">
+									        <li class="filter-producers>
+									            <input class="visually-hidden" type="checkbox" name="Hitachi" id="filter-hitachi">
 									            <label for="filter-hitachi">Hitachi</label>
 									        </li>
 							            </ul>
@@ -114,16 +114,16 @@
 									    <legend class="legend">Питание:</legend>
 										<ul class="filter-group">
 								            <li>
-								                <input class="visually-hidden" type="checkbox" name="slider" id="filter-slider" checked>
+								                <input class="visually-hidden" type="radio" name="radio" id="filter-slider" checked>
 								                <label for="filter-slider">Аккумуляторные</label>
 								            </li>
 								            <li>
-								                <input class="visually-hidden" type="checkbox" name="feature-block" id="filter-feature-block">
+								                <input class="visually-hidden" type="radio" name="radio" id="filter-feature-block">
 								                <label for="filter-feature-block">Сетевые</label>
 								            </li>
 								        </ul>
 								    </fieldset>
-									<button class="grey button btn" type="submit">Показать</button>
+									<button class="filter-button button" type="submit">Показать</button>
 								</form>
 							</section>
 						</div>
@@ -139,8 +139,8 @@
 									    <li class="sorting-criteria-item"><a href="catalog.html">По функционалу</a></li>
 									    </ul>
 									<ul class="sorting-order">
-									    <li class="sorting-order-item-current"><a class="down-link"><span class="visually-hidden">По возрастанию</span><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#c5c5c5" d="M5.5 10L0 0h11"/></svg></a></li>
-									    <li class="sorting-order-item"><a class="up-link" href="catalog.html"><span class="visually-hidden">По убыванию</span><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#c5c5c5" d="M5.5 0L0 10h11z"/></svg></a></li>
+									    <li class="sorting-order-item-current"><a class="up-link"><span class="visually-hidden">По возрастанию</span><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#c5c5c5" d="M5.5 0L0 10h11z"/></svg></a></li>
+									    <li class="sorting-order-item"><a class="down-link" href="catalog.html"><span class="visually-hidden">По убыванию</span><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#c5c5c5" d="M5.5 10L0 0h11"/></svg></a></li>
 									</ul>
 								</div>
 								<div class="row">
